--- a/LibraryConverter/packages.config
+++ b/LibraryConverter/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Ix-Main" version="1.2.5" targetFramework="net452" />
+  <package id="System.Interactive" version="3.0.0" targetFramework="net462" />
 </packages>
