--- a/ShibugakiViewer/ShibugakiViewer.csproj
+++ b/ShibugakiViewer/ShibugakiViewer.csproj
@@ -409,6 +409,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Resource Include="Assets\Fonts\MaterialIcons-Regular.ttf" />
+    <Resource Include="Assets\Fonts\materialdesignicons-webfont.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
