--- a/ShibugakiViewer/packages.config
+++ b/ShibugakiViewer/packages.config
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net462" />
-  <package id="ReactiveProperty" version="2.9.0" targetFramework="net462" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
+  <package id="ReactiveProperty" version="3.0.1" targetFramework="net462" />
   <package id="RestoreWindowPlace" version="1.2.0.0" targetFramework="net462" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net462" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net462" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net462" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net462" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net462" />
   <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net462" />
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net462" />
   <package id="System.Data.SQLite.EF6" version="1.0.102.0" targetFramework="net462" />
   <package id="System.Data.SQLite.Linq" version="1.0.102.0" targetFramework="net462" />
   <package id="System.Interactive" version="3.0.0" targetFramework="net462" />
-  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net462" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net462" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net462" />
+  <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net462" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net462" />
   <package id="XamlAnimatedGif" version="1.1.4" targetFramework="net462" />
 </packages>
