--- a/ShibugakiViewer.Backup/ShibugakiViewer.Backup.csproj
+++ b/ShibugakiViewer.Backup/ShibugakiViewer.Backup.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{145EB2E1-13B1-46D1-8B29-B3D546D41590}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ShibugakiViewer.Backup</RootNamespace>
     <AssemblyName>ShibugakiViewer.Backup</AssemblyName>
