--- a/LibraryConverter/LibraryConverter.csproj
+++ b/LibraryConverter/LibraryConverter.csproj
@@ -99,6 +99,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /y "$(TargetPath)" "..\..\..\ShibugakiViewer\bin\Debug\"
+xcopy /y "$(TargetPath)" "..\..\..\ShibugakiViewer\bin\Release\"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
