--- a/ShibugakiViewer/ShibugakiViewer.csproj
+++ b/ShibugakiViewer/ShibugakiViewer.csproj
@@ -114,6 +114,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
@@ -143,6 +144,7 @@
     <Compile Include="Models\Utility\IconHelper.cs" />
     <Compile Include="Models\Utility\KeyReceiver.cs" />
     <Compile Include="Models\Utility\RandomNumber.cs" />
+    <Compile Include="Models\Utility\VersionCheck.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -238,6 +240,9 @@
     </Compile>
     <Compile Include="Views\Windows\ToolWindow.xaml.cs">
       <DependentUpon>ToolWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Windows\VersionCheckWindow.xaml.cs">
+      <DependentUpon>VersionCheckWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Windows\VersionWindow.xaml.cs">
       <DependentUpon>VersionWindow.xaml</DependentUpon>
@@ -407,6 +412,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Windows\ToolWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Windows\VersionCheckWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
