--- a/ImageLibrary/packages.config
+++ b/ImageLibrary/packages.config
@@ -9,4 +9,5 @@
   <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net462" />
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net462" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
 </packages>
